create github pages

--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1,4 +1,11 @@
-@charset "UTF-8";
+.engine {
+	position: absolute;
+	text-indent: -2400px;
+	text-align: center;
+	padding: 0;
+	top: 0;
+	left: -2400px;
+}@charset "UTF-8";
 section {
   background-color: #ffffff;
 }
@@ -7,7 +14,7 @@ body {
   font-style: normal;
   line-height: 1.5;
   font-weight: 400;
-  color: #232323;
+  color: #000000;
   position: relative;
 }
 
@@ -783,7 +790,7 @@ body {
 .form-control {
   background-color: #ffffff;
   background-clip: border-box;
-  color: #232323;
+  color: #000000;
   line-height: 1rem !important;
   height: auto;
   padding: 0.6rem 1.2rem;
@@ -951,11 +958,4 @@ blockquote {
     width: 300% !important;
     left: -100% !important;
   }
-}.engine {
-	position: absolute;
-	text-indent: -2400px;
-	text-align: center;
-	padding: 0;
-	top: 0;
-	left: -2400px;
 }
