--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -18,7 +18,7 @@ body {
   font-size: 4.6875rem;
 }
 .display-4 {
-  font-family: 'Be Vietnam Pro', sans-serif;
+  font-family: 'Electrolize', sans-serif;
   font-size: 1.5rem;
   line-height: 1.4;
 }
@@ -26,7 +26,7 @@ body {
   font-size: 1.875rem;
 }
 .display-5 {
-  font-family: 'Be Vietnam Pro', sans-serif;
+  font-family: 'Electrolize', sans-serif;
   font-size: 1.875rem;
   line-height: 1.4;
 }
@@ -519,12 +519,17 @@ a.text-black.active {
   color: #000000 !important;
 }
 a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-caption) {
-  transition: 0.2s;
   position: relative;
-  background-image: linear-gradient(currentColor 50%, currentColor 50%);
+  background-image: transparent;
   background-size: 10000px 2px;
   background-repeat: no-repeat;
-  background-position: 0 1.2em;
+  background-position: 0px 1.2em;
+  background-position: -10000px 1.2em;
+}
+a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-caption):hover {
+  transition: background-position 2s ease-in-out;
+  background-image: linear-gradient(currentColor 50%, currentColor 50%);
+  background-position: 0px 1.2em;
 }
 .nav-tabs .nav-link.active {
   color: #913bff;
@@ -578,7 +583,7 @@ a:hover {
 }
 /* Scroll to top button*/
 .form-control {
-  font-family: 'Be Vietnam Pro', sans-serif;
+  font-family: 'Electrolize', sans-serif;
   font-size: 1.5rem;
   line-height: 1.4;
   font-weight: 400;
@@ -592,7 +597,7 @@ a:hover {
   border-color: #913bff !important;
 }
 .form-control:-webkit-input-placeholder {
-  font-family: 'Be Vietnam Pro', sans-serif;
+  font-family: 'Electrolize', sans-serif;
   font-size: 1.5rem;
   line-height: 1.4;
   font-weight: 400;
@@ -797,6 +802,7 @@ a:hover {
 .cid-tlvA3euxMm .mbr-section-title,
 .cid-tlvA3euxMm .mbr-section-btn {
   text-align: center;
+  color: #ff7a41;
 }
 .cid-tlvyXz0QVt {
   padding-top: 1rem;
@@ -1271,10 +1277,11 @@ a:hover {
   }
 }
 .cid-tlvyRjznVj .mbr-text {
-  color: #00284E;
+  color: #913bff;
   opacity: 0.8;
   margin-bottom: 0;
   word-break: normal;
+  text-align: right;
 }
 @media (max-width: 991px) {
   .cid-tlvyRjznVj .mbr-text {
@@ -1556,7 +1563,7 @@ a:hover {
 .cid-tlvz2sQ3Ej {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/background3.jpg");
 }
 .cid-tlvz2sQ3Ej .container {
   display: flex;
@@ -2172,10 +2179,11 @@ a:hover {
   }
 }
 .cid-tlvyRjznVj .mbr-text {
-  color: #00284E;
+  color: #913bff;
   opacity: 0.8;
   margin-bottom: 0;
   word-break: normal;
+  text-align: right;
 }
 @media (max-width: 991px) {
   .cid-tlvyRjznVj .mbr-text {
@@ -2226,7 +2234,7 @@ a:hover {
 .cid-tlvz2sQ3Ej {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/background3.jpg");
 }
 .cid-tlvz2sQ3Ej .container {
   display: flex;
@@ -2842,10 +2850,11 @@ a:hover {
   }
 }
 .cid-tm8QFnazXj .mbr-text {
-  color: #00284E;
+  color: #913bff;
   opacity: 0.8;
   margin-bottom: 0;
   word-break: normal;
+  text-align: right;
 }
 @media (max-width: 991px) {
   .cid-tm8QFnazXj .mbr-text {
@@ -2896,7 +2905,7 @@ a:hover {
 .cid-tm8QFnrdWD {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/background3.jpg");
 }
 .cid-tm8QFnrdWD .container {
   display: flex;
