--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,45 +1,45 @@
 body {
-  font-family: 'Be Vietnam Pro', sans-serif;
+  font-family: 'Aileron-Regular';
 }
 .display-1 {
-  font-family: 'Electrolize', sans-serif;
-  font-size: 5.3rem;
+  font-family: 'Aileron-Bold';
+  font-size: 3.8rem;
   line-height: 1.17;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 6.625rem;
+  font-size: 4.75rem;
 }
 .display-2 {
-  font-family: 'Electrolize', sans-serif;
-  font-size: 3.75rem;
+  font-family: 'Aileron-Regular';
+  font-size: 3.25rem;
   line-height: 1.31;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.6875rem;
+  font-size: 4.0625rem;
 }
 .display-4 {
-  font-family: 'Electrolize', sans-serif;
-  font-size: 1.5rem;
+  font-family: 'Aileron-Heavy';
+  font-size: 1.6rem;
   line-height: 1.4;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.875rem;
+  font-size: 2rem;
 }
 .display-5 {
-  font-family: 'Electrolize', sans-serif;
-  font-size: 1.875rem;
+  font-family: 'Aileron-Regular';
+  font-size: 1.75rem;
   line-height: 1.4;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.34375rem;
+  font-size: 2.1875rem;
 }
 .display-7 {
-  font-family: 'Be Vietnam Pro', sans-serif;
-  font-size: 1.125rem;
+  font-family: 'Aileron-Regular';
+  font-size: 1.63rem;
   line-height: 1.6;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.40625rem;
+  font-size: 2.0375rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -48,34 +48,34 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 992px) {
   .display-1 {
-    font-size: 4.24rem;
+    font-size: 3.04rem;
   }
 }
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 3.71rem;
-    font-size: calc( 2.505rem + (5.3 - 2.505) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.17 * (2.505rem + (5.3 - 2.505) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.66rem;
+    font-size: calc( 1.98rem + (3.8 - 1.98) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.17 * (1.98rem + (3.8 - 1.98) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 3rem;
-    font-size: calc( 1.9625rem + (3.75 - 1.9625) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.31 * (1.9625rem + (3.75 - 1.9625) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.6rem;
+    font-size: calc( 1.7874999999999999rem + (3.25 - 1.7874999999999999) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.31 * (1.7874999999999999rem + (3.25 - 1.7874999999999999) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.28rem;
+    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.5rem;
-    font-size: calc( 1.30625rem + (1.875 - 1.30625) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.30625rem + (1.875 - 1.30625) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.4rem;
+    font-size: calc( 1.2625rem + (1.75 - 1.2625) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.2625rem + (1.75 - 1.2625) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
-    font-size: 0.9rem;
-    font-size: calc( 1.04375rem + (1.125 - 1.04375) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.6 * (1.04375rem + (1.125 - 1.04375) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.304rem;
+    font-size: calc( 1.2205rem + (1.63 - 1.2205) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.6 * (1.2205rem + (1.63 - 1.2205) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -583,13 +583,13 @@ a:hover {
 }
 /* Scroll to top button*/
 .form-control {
-  font-family: 'Electrolize', sans-serif;
-  font-size: 1.5rem;
+  font-family: 'Aileron-Heavy';
+  font-size: 1.6rem;
   line-height: 1.4;
   font-weight: 400;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.875rem;
+  font-size: 2rem;
 }
 .form-control:hover,
 .form-control:focus {
@@ -597,13 +597,13 @@ a:hover {
   border-color: #913bff !important;
 }
 .form-control:-webkit-input-placeholder {
-  font-family: 'Electrolize', sans-serif;
-  font-size: 1.5rem;
+  font-family: 'Aileron-Heavy';
+  font-size: 1.6rem;
   line-height: 1.4;
   font-weight: 400;
 }
 .form-control:-webkit-input-placeholder > .mbr-iconfont {
-  font-size: 1.875rem;
+  font-size: 2rem;
 }
 blockquote {
   border-color: #913bff;
