--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3,19 +3,19 @@ body {
 }
 .display-1 {
   font-family: 'Aileron-Bold';
-  font-size: 3.7rem;
+  font-size: 1.6rem;
   line-height: 1.17;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 4.625rem;
+  font-size: 2rem;
 }
 .display-2 {
   font-family: 'Electrolize', sans-serif;
-  font-size: 3.8rem;
+  font-size: 3.7rem;
   line-height: 1.31;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.75rem;
+  font-size: 4.625rem;
 }
 .display-4 {
   font-family: 'Electrolize', sans-serif;
@@ -26,12 +26,12 @@ body {
   font-size: 2rem;
 }
 .display-5 {
-  font-family: 'Aileron-Regular';
-  font-size: 1.7rem;
+  font-family: 'Aileron-Light';
+  font-size: 1.1rem;
   line-height: 1.4;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.125rem;
+  font-size: 1.375rem;
 }
 .display-7 {
   font-family: 'Aileron-Regular';
@@ -48,19 +48,19 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 992px) {
   .display-1 {
-    font-size: 2.96rem;
+    font-size: 1.28rem;
   }
 }
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 2.59rem;
-    font-size: calc( 1.945rem + (3.7 - 1.945) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.17 * (1.945rem + (3.7 - 1.945) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.12rem;
+    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.17 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 3.04rem;
-    font-size: calc( 1.98rem + (3.8 - 1.98) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.31 * (1.98rem + (3.8 - 1.98) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.96rem;
+    font-size: calc( 1.945rem + (3.7 - 1.945) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.31 * (1.945rem + (3.7 - 1.945) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 1.28rem;
@@ -68,9 +68,9 @@ body {
     line-height: calc( 1.4 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.36rem;
-    font-size: calc( 1.245rem + (1.7 - 1.245) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.245rem + (1.7 - 1.245) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.88rem;
+    font-size: calc( 1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
     font-size: 1.2rem;
@@ -973,7 +973,7 @@ a:hover {
 }
 @media (min-width: 992px) {
   .cid-tlvyRjznVj .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 7.6rem);
+    max-height: calc(98.5vh - 6.7rem);
   }
 }
 .cid-tlvyRjznVj .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1386,7 +1386,7 @@ a:hover {
 }
 .cid-tlvz20ShS6 {
   padding-top: 1rem;
-  padding-bottom: 0rem;
+  padding-bottom: 1rem;
   background-color: #ffffff;
   overflow: hidden;
   position: relative;
@@ -1870,7 +1870,7 @@ a:hover {
 }
 @media (min-width: 992px) {
   .cid-tlvyRjznVj .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 7.6rem);
+    max-height: calc(98.5vh - 6.7rem);
   }
 }
 .cid-tlvyRjznVj .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -2534,7 +2534,7 @@ a:hover {
 }
 @media (min-width: 992px) {
   .cid-tm8QFnazXj .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 7.6rem);
+    max-height: calc(98.5vh - 6.7rem);
   }
 }
 .cid-tm8QFnazXj .navbar.collapsed .dropdown-menu .dropdown-submenu {
